--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Estudio Fotográfico Fotocom2000</title>
         <body>
             <h1>Bienvenido a la web del Estudio Fotográfico Fotocom2000</h1>
