--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Estudio Fotográfico Fotocom2000</title>
         <body>
             <h1>Bienvenido a la web del Estudio Fotográfico Fotocom2000</h1>
-            <h2>Esta es la página donde podrás ver nuestros trabajos</h2>
+            <p>Esta es la página donde podrás ver nuestros trabajos</p>
         </body>
     </head>
 </html>
