--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <body>
             <h1>Bienvenido a la web del Estudio Fotográfico Fotocom2000</h1>
             <p>Esta es la página donde podrás ver nuestros trabajos</p>
+            <p>Este es el parrafo de una nueva rama</p>
         </body>
     </head>
 </html>
