--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Estudio Fotográfico Fotocom2000</title>
         <body>
-            <h1>Bienvenido a la web del Estudio Fotográfico Fotocom2000</h1>
+            <h1>Somos el Estudio Fotográfico Fotocom2000</h1>
             <p>Esta es la página donde podrás ver nuestros trabajos</p>
         </body>
     </head>
